--- a/css/style.css
+++ b/css/style.css
@@ -830,12 +830,13 @@ body.overflow-hidden-header-three {
 }
 
 .brand span{
-  font-size: 14pt;
+  font-size: 13pt;
+  color: darkred;
   font-weight: bold;
-  font-style: italic;
+  font-family: 'Courier New', Courier, monospace;
 }
 .brand img {
-  height: 75px;
+  height: 40px;
 }
 
 .header-style-two .brand {
@@ -879,9 +880,9 @@ body.overflow-hidden-header-three {
   display: block;
   position: relative;
   font-size: 12px;
-  color: #595959;
-  font-family: Raleway, sans-serif;
-  font-weight: 600;
+  color: darkred;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 1000;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
