--- a/css/style.css
+++ b/css/style.css
@@ -873,7 +873,7 @@ body.overflow-hidden-header-three {
   padding: 28px 24px;
   display: block;
   position: relative;
-  color: darkred;
+  /*color: darkred;*/
   font-family: Orbitron; 
   font-size: 14px; 
   font-style: normal; 
@@ -927,7 +927,8 @@ body.overflow-hidden-header-three {
 
 .main-nav .sf-menu a:hover,
 .main-nav .sf-menu .sub-menu .sfHover a {
-  color: #8a8f6a;
+  /*color: #8a8f6a;*/
+  color: rgb(185, 182, 182);
 }
 
 .main-nav .sf-menu ul li {
