--- a/css/single_product.css
+++ b/css/single_product.css
@@ -774,3 +774,13 @@ body {
     padding: 5px 20px;
     border: solid 1px #eee;
   }
+
+  .user_icon{
+    color: black;
+    cursor: pointer;
+  }
+
+  .user_icon:hover{
+    color: rgb(185, 182, 182);
+  }
+  
