--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -70,7 +70,7 @@ form.sign-in-form {
   max-width: 250px;
   width: 100%;
   background-color: #f0f0f0;
-  margin: 10px 0;
+  margin: 10px 10px;
   height: 55px;
   border-radius: 55px;
   display: grid;
@@ -145,7 +145,7 @@ form.sign-in-form {
 }
 
 .image {
-  width: 100%;
+  width: 300px;
   transition: transform 1.1s ease-in-out;
   transition-delay: 0.4s;
 }
