--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -102,6 +102,10 @@ form.sign-in-form {
   font-weight: 500;
 }
 
+#sign-up-btn:hover{
+  background-color: red;
+}
+
 .btn {
   width: 150px;
   background-color: black;
@@ -120,6 +124,11 @@ form.sign-in-form {
 .btn:hover {
   background-color: red;
 }
+
+.btn solid{
+
+}
+
 .panels-container {
   position: absolute;
   height: 100%;
