--- a/css/shop.css
+++ b/css/shop.css
@@ -799,7 +799,7 @@ h5{
 .products{
   margin-left: 20px;
   margin-right: 20px;
-  margin-top: 20px;
+  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   width: 50%;
@@ -855,9 +855,61 @@ h5{
   color: rgb(185, 182, 182);
 }
 
-.filter{
-  margin-left: 50px;
-  margin-right: 50px;
+.filters_container{
+  width: 1400px;
+  height: 500px;
+  margin-left: 260px;
+  margin-right: 300px;
+  background-image: url("/images/538056924.jpg");
+  background-size: 100%;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  padding-left: 50px;
+  padding-right: 500px;
 }
+
+.filters_container .filters{
+  background-color: white;
+  margin-top: 40px;
+  width: 500px;
+  height: 300px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.filters_container .filters caption{
+  background-color: white;
+  font-size: large;
+  color: black;
+  font-weight: bolder;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.filters_container .filters .input_box{
+  width: 200px;
+  height: 40px;
+  font-size: medium;
+  color: black;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-left: 10px;
+  margin-top: 20px;
+}
+
+.filters_container .filters .submit{
+  margin-left: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 150px;
+  height: 40px;
+  background-color: lightgreen;
+  border: white;
+  color: black;
+  font-size: small;
+}
+
+
 
 
