--- a/css/shop.css
+++ b/css/shop.css
@@ -5,7 +5,7 @@ body {
   color: #7d7d7d;
   font-weight: 400;
   letter-spacing: 0.06em;
-  background-color: #fff;
+  background-color: #f5f5f7;
   overflow-y: scroll;
   overflow-x: hidden!important;
   -webkit-font-smoothing: antialiased;
@@ -795,44 +795,65 @@ h4{
 h5{
   color: black;
 }
-
 .products{
+  border: 1px solid green;
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 50px;
   display: flex;
   justify-content: space-between;
-  width: 50%;
 }
 
 .products tr td{
+  border: 1px solid rgb(0, 255, 170);
   width: 2%;
   /*margin-right: 20px;*/
 }
 
-.products img{
+/**** --------------------------- Card singola prodotto ----------------------------****/
+.container_card{ 
+  border: 1px solid blueviolet;
+}
+.vehicle_card_row_container{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  align-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+.vehicle_card{
   height: auto;
-  width: 98%;
+  width: 27%;
+  border: 1px solid red;
+  border-radius: 10px;
+  background-color: white;
+  -webkit-transition: all 0.3s 0s ease-in;
+  -moz-transition: all 0.3s 0s ease-in;
+  -o-transition: all 0.3s 0s ease-in;
+  transition: all 0.3s 0s ease-in;
 }
 
-.products .desc{
+.desc{
+  border: 1px solid rgb(0, 60, 255);
   margin-right: 2px;
 }
 
-.products .vehicle_card{
-  margin-right: 50px;
-  margin-bottom: 60px;
+.vehicle_card:hover{
+  box-shadow: 0 12px 16px 0 rgb(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-color: #ffffff6e;
 }
 
 .details{
-  width: 20%;
+  border: 1px solid salmon;
+  display: block;
 }
 
 .line{
   border-top: 1px solid black;
   margin-top: 5px;
 }
-
 
 .details h5{
   margin-right: 10px;
