add single product

--- a/css/sell_my_car.css
+++ b/css/sell_my_car.css
@@ -797,7 +797,7 @@
     color: white;
     }
     body {
-    background-color: white no-repeat center;
+    background-color: white; /*no-repeat center;*/
     background-size: cover;
     }
     h1, h2 {
