--- a/css/single_product.css
+++ b/css/single_product.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 13px;
     line-height: 24px;
-    color: #7d7d7d;
+    color: black;
     font-weight: 400;
     letter-spacing: 0.06em;
     background-color: #fff;
@@ -782,4 +782,13 @@ body {
 
   .user_icon:hover{
     color: rgb(185, 182, 182);
+  }
+
+  .content{
+    display: flex;
+    align-items: center;
+    /*justify-content: space-around;*/
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
