--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.page-loader * {
+/*.page-loader * {
   box-sizing: border-box;
   -o-box-sizing: border-box;
   -ms-box-sizing: border-box;
@@ -295,7 +295,7 @@ body {
   to {
     -moz-transform: translateY(-19px);
   }
-}
+}*/
 
 .box-layout {
   background: white;
@@ -317,7 +317,7 @@ body {
   background-color: #fff;
 }*/
 
-h1 {
+/*h1 {
   font-size: 64px;
   line-height: 1.3125em;
   letter-spacing: 4px;
@@ -415,14 +415,14 @@ p a {
   -moz-transition: all .15s linear;
   -o-transition: all .15s linear;
   transition: all .15s linear;
-}
+}*/
 
 ul {
   padding: 0;
   margin: 0;
 }
 
-select {
+/*select {
   padding: 10px;
   border: 1px solid #ebebeb;
   -webkit-box-sizing: border-box;
@@ -465,7 +465,6 @@ a:focus {
 }
 
 
-
 .header-table {
   display: table;
   width: 100%;
@@ -480,10 +479,6 @@ a:focus {
   display: table-cell;
   vertical-align: middle;
 }
-
-
-
-
 
 .header-scroll-fixed .brand img {
   height: 65px;
@@ -522,266 +517,6 @@ a:focus {
     height: auto !important;
   }
 }
-
-
-/*** Header Two Style **/
-
-.header-style-two {
-  margin: 25px 0 20px 0;
-}
-
-.header-style-two .brand,
-.header-inner .header-style-two .main-nav {
-  display: block;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-}
-
-
-/*** Header three menu **/
-
-body.overflow-hidden-header-three {
-  position: fixed;
-  width: 100%;
-}
-
-.overlay-content-wrap {
-  opacity: 0;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transition: opacity .3s ease-in;
-  -moz-transition: opacity .3s ease-in;
-  -o-transition: opacity .3s ease-in;
-  -ms-transition: opacity .3s ease-in;
-  transition: opacity .3s ease-in;
-}
-
-.overlay-content-wrap.overlay-active {
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 1;
-  cursor: pointer;
-  position: fixed;
-  top: 0;
-  z-index: 990;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.header-three {
-  padding: 5px 90px 5px 90px;
-}
-
-.header-three .sf-menu {
-  width: 320px;
-  height: 100%;
-  position: fixed;
-  right: 0;
-  top: 0;
-  opacity: 0;
-  background: #fff;
-  /*overflow: auto;*/
-  z-index: 999;
-  padding: 55px 25px 25px 40px;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  transform: translate(320px, 0);
-  -webkit-transform: translate(320px, 0);
-  /** Safari & Chrome **/
-  -o-transform: translate(320px, 0);
-  /** Opera **/
-  -moz-transform: translate(320px, 0);
-  /** Firefox **/
-}
-
-.header-three .sf-menu.active-menu {
-  opacity: 1;
-  transform: translate(0, 0);
-  -webkit-transform: translate(0, 0);
-  /** Safari & Chrome **/
-  -o-transform: translate(0, 0);
-  /** Opera **/
-  -moz-transform: translate(0, 0);
-  /** Firefox **/
-}
-
-@media only screen and (max-width: 660px) {
-  .header-three .sf-menu {
-    width: 290px;
-    transform: translate(290px, 0);
-    -webkit-transform: translate(290px, 0);
-    /** Safari & Chrome **/
-    -o-transform: translate(290px, 0);
-    /** Opera **/
-    -moz-transform: translate(290px, 0);
-    /** Firefox **/
-  }
-}
-
-.header-three .sf-menu h3 {
-  font-weight: 600;
-  text-align: left;
-  text-transform: uppercase;
-  font-size: 24px;
-}
-
-.header-three .sf-menu ul {
-  text-align: left;
-}
-
-.header-three .sf-menu ul.sf-menu {
-  padding: 0;
-  margin: 44px 0 0 0;
-}
-
-.header-three .main-nav .sf-menu .sf-menu > li {
-  display: block;
-  margin: 25px 0 0 0;
-  list-style: none;
-}
-
-.header-three .main-nav .sf-menu .sf-menu li a {
-  font-size: 18px;
-  padding: 0;
-  text-transform: none;
-  font-weight: 400;
-}
-
-.header-three .main-nav .sf-menu .sf-menu ul.sub-menu li a {
-  font-size: 12px;
-  font-weight: 400;
-  text-transform: none;
-  margin: 0 13px;
-  padding: 9px 4px;
-}
-
-.header-three .nav-button-holder {
-  position: relative;
-  right: 20px;
-  float: right;
-  background-color: #fff;
-  padding: 20px 21px;
-}
-
-.nav-button:focus {
-  outline: none;
-}
-
-.nav-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: transparent;
-  overflow: hidden;
-  margin: auto;
-  padding: 0;
-  width: 22px;
-  height: 20px;
-  font-size: 0;
-  text-align: right;
-  text-indent: -9999px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  box-shadow: none;
-  border-radius: none;
-  border: none;
-  cursor: pointer;
-  -webkit-transition: background 0.3s;
-  transition: background 0.3s;
-  z-index: 1000
-}
-
-.nav-button span {
-  display: block;
-  position: absolute;
-  top: 9px;
-  left: 0;
-  right: 0;
-  height: 3px;
-  background: #5d5d5d;
-}
-
-.nav-button span::before,
-.nav-button span::after {
-  position: absolute;
-  display: block;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background-color: #5d5d5d;
-  content: "";
-}
-
-.nav-button span::before {
-  top: -7px;
-}
-
-.nav-button span::after {
-  bottom: -7px;
-}
-
-.nav-button span {
-  -webkit-transition: background 0 0.3s;
-  transition: background 0 0.3s;
-}
-
-.nav-button span::before,
-.nav-button span::after {
-  -webkit-transition-duration: 0.3s, 0.3s;
-  transition-duration: 0.3s, 0.3s;
-  -webkit-transition-delay: 0.3s, 0;
-  transition-delay: 0.3s, 0;
-}
-
-.nav-button span::before {
-  -webkit-transition-property: top, -webkit-transform;
-  transition-property: top, transform;
-}
-
-.nav-button span::after {
-  -webkit-transition-property: bottom, -webkit-transform;
-  transition-property: bottom, transform;
-}
-
-
-/* active state, i.e. menu open */
-
-.nav-button.active {}
-
-.nav-button.active span {
-  background: none;
-}
-
-.nav-button.active span::before {
-  top: 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.nav-button.active span::after {
-  bottom: 0;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.nav-button.active span::before,
-.nav-button.active span::after {
-  -webkit-transition-delay: 0, 0.3s;
-  transition-delay: 0, 0.3s;
-}
-
-
-/*** Header style four ****/
-
-.header-four {}
-
 
 /*** Brand logo ***/
 
@@ -955,48 +690,6 @@ body.overflow-hidden-header-three {
   border-left: solid 1px #eee;
 }
 
-.main-nav .sf-menu ul ul li a {
-  color: #696969 !important;
-}
-
-.main-nav .sf-menu ul ul li a:hover {
-  color: #8a8f6a !important;
-}
-
-
-/*** arrows (for all except IE7) **/
-
-.sf-arrows .sf-with-ul {
-  padding-right: 2.5em;
-  *padding-right: 1em;
-  /* no CSS arrows for IE7 (lack pseudo-elements) */
-}
-
-.sf-arrows .sub-menu .sf-with-ul:after {
-  content: '';
-  width: 0;
-  height: 0;
-  border-top: 3px solid transparent;
-  border-bottom: 3px solid transparent;
-  border-left: 3px solid #888;
-  position: absolute;
-  right: 8px;
-  top: 14px;
-}
-
-.sf-arrows > li > .sf-with-ul:focus:after,
-.sf-arrows > li:hover > .sf-with-ul:after,
-.sf-arrows > .sfHover > .sf-with-ul:after {
-  border-top-color: white;
-  /* IE8 fallback colour */
-}
-
-.sf-arrows ul li > .sf-with-ul:focus:after,
-.sf-arrows ul li:hover > .sf-with-ul:after,
-.sf-arrows ul .sfHover > .sf-with-ul:after {
-  border-left-color: #999;
-}
-
 .header-inner #mobnav-btn {
   position: absolute;
   width: 25px;
@@ -1150,157 +843,7 @@ body.overflow-hidden-header-three {
   }
 }
 
-div.opt {
-  margin: 10px;
-  background: #eee;
-  padding: 5px;
-}
 
-span.option {
-  font-weight: 700;
-}
-
-span.description {
-  margin-left: 10px;
-}
-
-.align-center {
-  text-align: center;
-}
-
-.menu-search-bar {
-  position: relative;
-  cursor: pointer;
-}
-
-.menu-search-bar #search-label {
-  padding-left: 12px;
-}
-
-.menu-search-bar #search-label i {
-  font-size: 16px;
-}
-
-.search-bar {
-  position: absolute;
-  right: 8px;
-  margin-top: 15px;
-  display: none;
-}
-
-.search-bar input {
-  width: 235px;
-  height: 50px;
-  padding: 5px 20px;
-  border: solid 1px #eee;
-}
-
-
-/*Menu Style Two*/
-
-.menu-content {
-  background: #8a8f6a;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 998;
-  color: #fff;
-  display: none;
-}
-
-.menu-content-wrap {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-
-.menu-content ul.menu-nav {
-  width: 100%;
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  list-style: none;
-}
-
-.menu-content ul.menu-nav li {
-  text-align: center;
-}
-
-.menu-content ul.menu-nav li a {
-  color: #fff;
-  text-align: center;
-  font-size: 34px;
-  line-height: 1.8em;
-  font-weight: 700;
-  letter-spacing: 2px;
-  margin-right: 10px;
-}
-
-.menu-content ul.menu-nav ul {
-  float: none;
-  width: 100% !important;
-  list-style: none inside;
-  padding: 0;
-  margin: 0;
-  visibility: hidden;
-  max-height: 0;
-  visibility: hidden;
-  filter: alpha(opacity=0);
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  -webkit-opacity: 0;
-  -khtml-opacity: 0;
-  -moz-opacity: 0;
-  -ms-opacity: 0;
-  -o-opacity: 0;
-  opacity: 0;
-  -webkit-transition: max-height, 500ms, ease-in-out;
-  -khtml-transition: max-height, 500ms, ease-in-out;
-  -moz-transition: max-height, 500ms, ease-in-out;
-  -ms-transition: max-height, 500ms, ease-in-out;
-  -o-transition: max-height, 500ms, ease-in-out;
-  transition: max-height, 500ms, ease-in-out;
-}
-
-.menu-content ul.menu-nav .sub-menu-open {
-  max-height: 500px;
-  visibility: visible;
-  filter: alpha(opacity=100);
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  -webkit-opacity: 1;
-  -khtml-opacity: 1;
-  -moz-opacity: 1;
-  -ms-opacity: 1;
-  -o-opacity: 1;
-  opacity: 1;
-}
-
-.menu-content ul.menu-nav ul li a {
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.menu-content .sf-arrows .sf-with-ul {
-  padding: 0 !important;
-}
-
-.menu-content ul.menu-nav .mobnav-subarrow {
-  cursor: pointer;
-  display: inline;
-  position: relative;
-  top: -4px;
-}
-
-.menu-content ul.menu-nav li ul .mobnav-subarrow {
-  top: 0;
-}
-
-.menu-content ul.menu-nav .menu-search-bar .search-bar {
-  right: 0;
-  left: 0;
-}
 
 
 /*=================================================
