--- a/css/prova.css
+++ b/css/prova.css
@@ -218,11 +218,9 @@ input[name="r"]{
 }
 
 .container-about {
-    background-color: #fff;
-    padding: 60px 0 60px 0;
-    display: flex;
-    justify-content: space-between;
-    
+  background-color: #fff;
+  padding: 60px 0 60px 0;
+  
 }
 
 .container .row{
@@ -230,8 +228,139 @@ input[name="r"]{
     align-items: center;
     justify-content: space-around;
     align-content: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.title-un-icon {
+  color: #8a8f6a;
+  text-align: center;
+  display: block;
+  font-size: 30px;
+  position: relative;
+  opacity: .8;
+}
+
+.title-un-icon:before {
+  position: absolute;
+  left: 0;
+  right: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #f1f1f1;
+  width: 200px;
+  height: 3px;
+  bottom: 16px;
+  opacity: 1;
+  font-size: 68px;
+  font-family: serif;
+  content: " ";
+}
+
+.title-un-icon:after {
+  position: absolute;
+  left: 280px;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  background: #f1f1f1;
+  width: 200px;
+  height: 3px;
+  bottom: 16px;
+  opacity: 1;
+  font-size: 68px;
+  font-family: serif;
+  content: " ";
+}
+
+.title-un {
+  margin-bottom: 15px;
+  letter-spacing: 4px;
+  font-weight: 500;
+  font-size: 24px;
+  text-align: center;
+}
+
+.title-un,
+.title-small-un {
+  text-align: center;
+  position: relative;
+  letter-spacing: 3px;
+}
+
+.title-un-des,
+.title-un-des-two {
+  text-align: center;
+  width: 70%;
+  margin: 20px auto 45px auto;
+}
+
+@media (max-width: 650px) {
+  .title-un-icon:before {
+    width: 115px;
+    right: 180px;
+  }
+  .title-un-icon:after {
+    left: 180px;
+    width: 115px;
+  }
+}
+
+.service-box-sb {
+  margin: 0 0 20px 0;
+  text-align: center;
+}
+
+.service-box-sb h5 {
+  letter-spacing: 3px;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.service-box-sb .service-img {
+  margin-bottom: 20px;
+  border: solid 1px #f1f1f1;
+  border-radius: 2px;
+  padding: 1px;
+}
+
+.service-box-sb .service-img img {
+  border-radius: 1px;
+}
+
+.service-box-sb .service-icon {
+  margin: 0 auto 18px;
+  color: #8a8f6a;
+  text-align: center;
+  font-size: 40px;
+}
+
+.service-box-sb .img-round,
+.service-box-sb .img-round img {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.service-box-sb .service-icon .fa {}
+
+.service-box-sb .service-info {
+  margin-top: 4px;
+  overflow: hidden;
+}
+
+.service-box-sb .service-info h4 {
+  color: #000;
+}
+
+.service-box-sb .service-info .desc {
+  margin-top: 15px;
+  text-justify: auto;
+}
+
+.service-box-sb .button {
+  margin-top: 27px;
 }
 
 video{
@@ -242,92 +371,3 @@ video{
     margin-top: 3%;
 }
 
-.title-un {
-    color: #8a8f6a;
-    text-align: center;
-    display: block;
-    font-size: 30px;
-    position: relative;
-    opacity: .8;
-  }
-  
-  .title-un:before {
-    position: absolute;
-    left: 0;
-    right: 280px;
-    margin-left: auto;
-    margin-right: auto;
-    background: #f1f1f1;
-    width: 200px;
-    height: 3px;
-    bottom: 16px;
-    opacity: 1;
-    font-size: 68px;
-    font-family: serif;
-    content: " ";
-  }
-  
-  .title-un:after {
-    position: absolute;
-    left: 280px;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    background: #f1f1f1;
-    width: 200px;
-    height: 3px;
-    bottom: 16px;
-    opacity: 1;
-    font-size: 68px;
-    font-family: serif;
-    content: " ";
-  }
-  
-  .title-un {
-    margin-bottom: 15px;
-    letter-spacing: 4px;
-    font-weight: 500;
-    font-size: 24px;
-    text-align: center;
-  }
-
-  .title-un-des {
-    text-align: center;
-    width: 70%;
-    margin: 20px auto 45px auto;
-}
-
-  .service-box-sb {
-    margin: 0 0 20px 0;
-    text-align: center;
-  }
-  
-  .service-box-sb h5 {
-    letter-spacing: 3px;
-    font-weight: 500;
-    font-size: 14px;
-  }
-  
-  .service-box-sb .service-img {
-    margin-bottom: 20px;
-    border: solid 1px #f1f1f1;
-    border-radius: 2px;
-    padding: 1px;
-  }
-  
-  .service-box-sb .service-img img {
-    border-radius: 1px;
-  }
-
-  .service-box-sb .service-info {
-    margin-top: 4px;
-    overflow: hidden;
-  }
-  
-  .service-box-sb .service-info h4 {
-    color: #000;
-  }
-  
-  .service-box-sb .service-info .desc {
-    margin-top: 15px;
-  }
