--- a/css/style.css
+++ b/css/style.css
@@ -834,7 +834,7 @@ video{
   color: black;
   padding: 1rem 2rem;
   border-radius: .25rem;
-  font-size: 11px;
+  font-size: 14px;
   transition: .3s;
   font-family: sans-serif;
 }
@@ -1025,4 +1025,71 @@ video{
 
 .swiper-pagination-bullet-active{
   background-color: hsl(219, 69%, 56%);
+}
+
+.offer{
+  position: relative;
+}
+
+.offer__container{
+  grid-template-rows: max-content 224px;
+}
+
+.offer__bg{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.offer__data,
+.offer__img{
+  position: relative;
+}
+.offer__data{
+  text-align: center;
+  color: white;
+}
+
+.offer__title{
+  margin-bottom: 2rem;
+}
+
+.offer__description{
+  margin-bottom: 3rem;
+}
+
+.offer__img{
+  position: absolute;
+  max-width: initial;
+  width: 400px;
+  bottom: 2rem;
+  right: -5.5rem;
+}
+
+.logos__img{
+  width: 40px;
+  opacity: .4;
+  transition: .3s; 
+}
+
+.logos__container{
+  grid-template-columns: repeat(3, max-content);
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  padding-bottom: 2rem;
+  background-color: black;
+  margin-top: 3%;
+
+}
+
+.logos__img:hover{
+  opacity: 1;
 }
