--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,7 @@ html {
 
 ::-webkit-scrollbar-thumb:hover{
   background-color: hsl(219, 4%, 32%);
-
 }
-
-
 
 body {
   font-family: 'Raleway', sans-serif;
@@ -859,6 +856,9 @@ video{
 
 .button__about:hover{
   background-color: white;
+  color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 
 .about__container{
@@ -1022,6 +1022,7 @@ video{
   position: absolute;
   right: 0;
   bottom: 0;
+  font-size: 14px;
   border-radius: 1rem 0 1rem 0;
   transition: .3s;
   cursor: pointer;
@@ -1032,6 +1033,7 @@ video{
 .popular__button:hover{
   background-color: white;
   color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 
@@ -1083,11 +1085,14 @@ video{
   font-size: 14px;
   transition: .3s;
   font-family: sans-serif;
+  transition: .3s;
+
 }
 
 .offer__button:hover{
   background-color: white;
   color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .offer__title{
