--- a/css/my_transaction.css
+++ b/css/my_transaction.css
@@ -31,7 +31,8 @@ body {
     margin: 0;
   }
   
-  a:hover,
+  a:
+  hover,
   a:focus {
     color: #5d5d5d;
   }
@@ -793,45 +794,16 @@ body {
     height: 100%;
     max-width: 100%;
   }
+  
+  .title_car{
+    font-size: 1.2em;
+    font-family:  Orbitron;
+    font-weight: 800;
+  }
 
-  .vehicle_card table{
-    height: auto;
-    max-width: 100%;
-  }
-  h2{
-    color: black;
-  }
-  
-  h3{
-    color: black;
-  }
-  
-  h4{
-    color: black;
-  }
-  
-  h5{
-    color: black;
-  }
-  .products{
-    /*border: 1px solid green;*/
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .products tr td{
-    /*border: 1px solid rgb(0, 255, 170);*/
-    width: 2%;
-    /*margin-right: 20px;*/
-  }
   
   /**** --------------------------- Card singola prodotto ----------------------------****/
-  .container_card{ 
-    /*border: 1px solid blueviolet;*/
-  }
+
   .vehicle_card_row_container{
     display: flex;
     align-items: center;
@@ -852,10 +824,14 @@ body {
     -o-transition: all 0.3s 0s ease-in;
     transition: all 0.3s 0s ease-in;
     padding: 1% 1% 1% 1%;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+    margin-bottom: 3%;
+
   }
   
   .desc{
     /*border: 1px solid rgb(0, 60, 255);*/
+    margin: 0px;
     margin-right: 2px;
   }
   
@@ -868,23 +844,29 @@ body {
     /*border: 1px solid salmon;*/
     display: block;
   }
+
+  .details p{
+    
+  }
   
+  
+
+  .col{
+    border-width:  1px;
+    border-color: #111111;
+  }
+
   .line{
     border-top: 1px solid black;
     margin-top: 5px;
   }
   
-  .details h5{
-    margin-right: 10px;
+  .h1{
+    font-family: Orbitron;
+    text-align: center;
   }
   
-  .details .desc{
-    margin-right: 5px;
-  }
-  
-  .details tr td{
-    width: 5%;
-    margin-right: 5px;
-  }
+
+
 
   
