--- a/css/shop.css
+++ b/css/shop.css
@@ -824,6 +824,7 @@ h5{
   width: 100%;
 }
 .vehicle_card{
+  position: relative;
   height: auto;
   width: 25%;
   /*border: 1px solid red;*/
@@ -834,6 +835,40 @@ h5{
   -o-transition: all 0.3s 0s ease-in;
   transition: all 0.3s 0s ease-in;
   padding: 1% 1% 1% 1%;
+}
+
+.image{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.vehicle_card:hover .overlay {
+  height: 100%;
+}
+
+.text {
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .desc{
