--- a/css/shop.css
+++ b/css/shop.css
@@ -785,15 +785,16 @@ h2{
 }
 
 h3{
-  color: black;
+  color: white;
 }
 
 h4{
   color: black;
+  font-family: Orbitron, sans-serif;
 }
 
 h5{
-  color: black;
+  color: white;
 }
 .products{
   /*border: 1px solid green;*/
@@ -848,7 +849,7 @@ h5{
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #008CBA;
+  background-image: linear-gradient(rgba(0,0,0,.60), rgba(0,0,0,0.60));
   overflow: hidden;
   width: 100%;
   height: 0;
@@ -887,7 +888,7 @@ h5{
 }
 
 .line{
-  border-top: 1px solid black;
+  border-top: 1px solid white;
   margin-top: 5px;
 }
 
