--- a/css/bootstrap2.css
+++ b/css/bootstrap2.css
@@ -57,15 +57,14 @@ body {
 }
 
 hr {
-  margin: 1rem 0;
   color: inherit;
   background-color: currentColor;
   border: 0;
-  opacity: 0.25;
+  width: 100%;
 }
 
 hr:not([size]) {
-  height: 1px;
+  height: 2px;
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
