--- a/css/shop.css
+++ b/css/shop.css
@@ -49,6 +49,7 @@ a:focus {
 }
 
 .header-inner.header-scroll-up {
+  backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -webkit-transition: -webkit-transform .4s ease-in-out;
   -moz-transition: -moz-transform .4s ease-in-out;
@@ -383,7 +384,6 @@ body.overflow-hidden-header-three {
 
 /* active state, i.e. menu open */
 
-.nav-button.active {}
 
 .nav-button.active span {
   background: none;
@@ -408,11 +408,6 @@ body.overflow-hidden-header-three {
   -webkit-transition-delay: 0, 0.3s;
   transition-delay: 0, 0.3s;
 }
-
-
-/*** Header style four ****/
-
-.header-four {}
 
 
 /*** Brand logo ***/
@@ -723,7 +718,6 @@ body.overflow-hidden-header-three {
     border: none;
     border-top: 1px solid #e8e8e8;
   }
-  .main-nav .sf-menu ul li:first-child {}
   .sf-menu ul,
   .sf-menu ul ul {
     position: static;
@@ -812,10 +806,8 @@ h5{
 }
 
 /**** --------------------------- Card singola prodotto ----------------------------****/
-.container_card{ 
-  /*border: 1px solid blueviolet;*/
-}
 .vehicle_card_row_container{
+  margin-top: 3%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -825,10 +817,8 @@ h5{
   width: 100%;
 }
 .vehicle_card{
-  position: relative;
   height: auto;
-  width: 25%;
-  /*border: 1px solid red;*/
+  width: 27%;
   border-radius: 10px;
   background-color: white;
   -webkit-transition: all 0.3s 0s ease-in;
@@ -836,12 +826,13 @@ h5{
   -o-transition: all 0.3s 0s ease-in;
   transition: all 0.3s 0s ease-in;
   padding: 1% 1% 1% 1%;
+  box-shadow: 0 20px 30px rgba(0,0,0,.1);
+  margin-bottom: 3%;
 }
 
-.image{
-  display: block;
-  width: 100%;
-  height: auto;
+.vehicle_card img{
+  height: 100%;
+  max-width: 100%;
 }
 
 .overlay{
@@ -874,17 +865,21 @@ h5{
 
 .desc{
   /*border: 1px solid rgb(0, 60, 255);*/
-  margin-right: 2px;
+  margin-right: 0px;
+  white-space: wrap;
 }
 
 .vehicle_card:hover{
   box-shadow: 0 12px 16px 0 rgb(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  background-color: #ffffff6e;
+  background-color: white;
 }
 
 .details{
   /*border: 1px solid salmon;*/
   display: block;
+  font-weight: 600;  
+  color: #111111;
+  opacity: 0.90;
 }
 
 .line{
@@ -1007,6 +1002,10 @@ option:first-child{
 
 
 
-
+.row hr{
+  width: 100%;
+  color: black;
+  height: 3px;
+}
 
 
