--- a/css/vendor_reg.css
+++ b/css/vendor_reg.css
@@ -832,7 +832,7 @@ body {
   
   .vehicle_card:hover{
     box-shadow: 0 12px 16px 0 rgb(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: #ffffff6e;
+    background-color: white;
   }
   
   .details{
