--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -965,10 +965,10 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-bottom: 20px;
-  border: 0;
-  border-top: 1px solid #eee;
+  /* border: 0; */
+  /* border-top: 1px solid #eee; */
 }
 .sr-only {
   position: absolute;
