--- a/css/footer_logo.css
+++ b/css/footer_logo.css
@@ -1,122 +1,121 @@
+
+.logos__img{
+  width: 80px;
+  opacity: .4;
+  transition: .3s;
+  padding-top: 10rem;
+}
+
+.logos__container{
+  grid-template-columns: repeat(3, max-content);
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4rem;
+  padding-bottom: 2rem;
+  background-color: hsl(219, 4%, 7%);
+  margin-top: 3%;
+
+}
+
+.logoos_content a{
+  text-decoration: none;
+}
+
+.logos__img:hover{
+  opacity: 1;
+}
+
 .footer{
-    position: relative;
-    overflow: hidden;
-    background-color: hsl(219, 4%, 7%);
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-  
-  .footer .shape__big,
-  .footer .shape__small{
-    position: absolute;
-  }
-  
-  .footer .shape__big{
-    width: 300px;
-    height: 300px;
-    left: -12rem;
-    top: 6rem;
-  }
-  
-  .footer .shape__small{
-    right: -13rem;
-    bottom: -6rem;
-  }
-  
-  .footer__container{
-    row-gap: 2.5rem;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    padding-left: 15%;
-    padding-right: 15%;
-  }
-  
-  .footer__logo{
-    display: inline-flex;
-    align-items: center;
-    column-gap: .25rem;
-    color: hsl(219, 8%, 95%);
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 1.25rem;
-    transition: .3s;
-  }
-  
-  .footer__logo i{
-    font-size: 1.2rem;
-    font-weight: 500;
-  }
-  
-  .footer__logo:hover{
-    color: hsl(219, 69%, 56%);
-  }
-  
-  .footer__title{
-    font-size: 1.2rem;
-    margin-bottom: 1.25rem;
-    color: hsl(219, 8%, 95%);
-    font-weight: 600;
-  }
-  
-  .footer__links{
-    display: flex;
-    flex-direction: column;
-    row-gap: .5rem;
-    list-style: none;
-  }
-  
-  .footer__link,
-  .footer__social-link{
-    color: hsl(219, 8%, 75%);
-    transition: .3s;
-  }
-  
-  .footer__link:hover,
-  .footer__social-link:hover{
-    color: hsl(219, 8%, 95%);
-  }
-  
-  .footer__social{
-    display: flex;
-    column-gap: 1rem;
-  }
-  
-  .footer__social-link{
-    font-size: 1.3rem;
-  }
-  .logos__img{
-    width: 80px;
-    opacity: .4;
-    transition: .3s;
-    padding-top: 5rem;
-  }
-  
-  .logos__container{
-    grid-template-columns: repeat(3, max-content);
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 4rem;
-    padding-bottom: 2rem;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: hsl(219, 4%, 7%);
-    margin-top: 3%;
-  
-  }
-  
-  .logoos_content a{
-    text-decoration: none;
-  }
-  
-  .logos__img:hover{
-    opacity: 1;
-  }
+  position: relative;
+  overflow: hidden;
+  background-color: hsl(219, 4%, 7%);
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.footer .shape__big,
+.footer .shape__small{
+  position: absolute;
+}
+
+.footer .shape__big{
+  width: 300px;
+  height: 300px;
+  left: -12rem;
+  top: 6rem;
+}
+
+.footer .shape__small{
+  right: -13rem;
+  bottom: -6rem;
+}
+
+.footer__container{
+  row-gap: 2.5rem;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+
+.footer__logo{
+  display: inline-flex;
+  align-items: center;
+  column-gap: .25rem;
+  color: hsl(219, 8%, 95%);
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1.25rem;
+  transition: .3s;
+}
+
+.footer__logo i{
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.footer__logo:hover{
+  color: hsl(219, 69%, 56%);
+}
+
+.footer__title{
+  font-size: 2rem;
+  margin-bottom: 1.25rem;
+  color: hsl(219, 8%, 95%);
+  font-weight: 600;
+}
+
+.footer__links{
+  display: flex;
+  flex-direction: column;
+  row-gap: .5rem;
+  list-style: none;
+}
+
+.footer__link,
+.footer__social-link{
+  color: hsl(219, 8%, 75%);
+  transition: .3s;
+}
+
+.footer__link:hover,
+.footer__social-link:hover{
+  color: hsl(219, 8%, 95%);
+}
+
+.footer__social{
+  display: flex;
+  column-gap: 1.5rem;
+}
+
+.footer__social-link{
+  font-size: 2rem;
+}
+
 
   html {
     scroll-behavior: smooth;
@@ -124,7 +123,7 @@
   }
   
   ::-webkit-scrollbar{
-    width: .45rem;
+    width: .7rem;
     background-color: hsl(219, 4%, 16%);
     border-radius: 1rem;
   }
@@ -138,7 +137,3 @@
     background-color: hsl(219, 4%, 32%);
   }
 
-  p.footer__description {
-    color: white;
-    opacity: 0.6;
-}
