--- a/css/shop.css
+++ b/css/shop.css
@@ -748,6 +748,11 @@ body.overflow-hidden-header-three {
   max-width: 100%;
 }
 
+.title_car {
+  font-size: 1.2em;
+  font-family: Orbitron;
+  font-weight: 800;
+}
 .overlay{
   position: absolute;
   bottom: 0;
@@ -915,8 +920,8 @@ option:first-child{
 
 
 
-.row hr{
-  width: 100%;
-  color: black;
-  height: 3px;
+hr{
+  max-width: 100%;
+  /* height: 3px; */
+  background-color: black;
 }
